--- a/wc.html
+++ b/wc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Checker</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Linking external CSS file -->
+    <link rel="stylesheet" href="wc.css"> <!-- Linking external CSS file -->
 </head>
 <body>
     
@@ -16,6 +16,6 @@
         <p id="weatherResult"></p>
     </div>
 
-    <script src="script.js"></script> <!-- Linking external JavaScript file -->
+    <script src="wc.js"></script> <!-- Linking external JavaScript file -->
 </body>
 </html>
